src/objects/PAN_Card__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PAN cards</relationshipLabel>
        <relationshipName>PAN_cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fathers_Name__c</fullName>
        <label>Fathers Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_card_Number__c</fullName>
        <label>PAN card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIN_code__c</fullName>
        <label>PIN code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PAN Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAN cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>